ConsultingHub/force-app/main/default/objects/ia_Engagement__c/ia_Engagement__c.object-meta.xml
<CustomObject>
    <description>Document details of on going and completed engagements</description>
    <label>Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>