ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Please add hyperlink to customer&apos;s Org62 Account record</inlineHelpText>
    <label>Account</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>