ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview__c</fullName>
    <inlineHelpText>High level overview of customer.  Description field on Org62 Account record sometimes includes this.</inlineHelpText>
    <label>Company Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>