ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Customer_Folder__c.field-meta.xml
<CustomField>
    <fullName>Customer_Folder__c</fullName>
    <inlineHelpText>Add hyperlinks to your IA engagement Quip and Google Drive folders</inlineHelpText>
    <label>Customer Folder</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>