ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Engagement_Extended__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engagement Extended</label>
    <type>Checkbox</type>
</CustomField>