ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select based on type and domain of engagement (e.g. Sales Cloud, Service Cloud, CPQ, FSL, etc.)</inlineHelpText>
    <label>Engagement Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_Engagement_Type__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_Engagement_Type__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagement</relationshipName>
    <type>Lookup</type>
</CustomField>