ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Multi_Cloud_Detail__c.field-meta.xml
<CustomField>
    <fullName>Multi_Cloud_Detail__c</fullName>
    <inlineHelpText>Enter details regarding customer landscape if using multiple Salesforce clouds</inlineHelpText>
    <label>Multi Cloud Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>