ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <inlineHelpText>Please add hyperlink to partner&apos;s Org62 Account record</inlineHelpText>
    <label>Partner</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>