ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>Please add hyperlink to Org62 Project record</inlineHelpText>
    <label>Project</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>