ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Project_Spotlight__c.field-meta.xml
<CustomField>
    <fullName>Project_Spotlight__c</fullName>
    <inlineHelpText>Add hyperlink to your Project Spotlight slide</inlineHelpText>
    <label>Field Value Story</label>
    <type>Url</type>
</CustomField>