ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Managed By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ia_Project_Management</valueSetName>
    </valueSet>
</CustomField>