ConsultingHub/force-app/main/default/objects/ia_Engagement__c/fields/Story_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Story_Synopsis__c</fullName>
    <inlineHelpText>Overview of goals for IA engagement and outcomes targeted/delivered</inlineHelpText>
    <label>Story Synopsis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>