ConsultingHub/force-app/main/default/objects/ia_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Partner__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>