ConsultingHub/force-app/main/default/objects/ia_Engagement__c/listViews/All_CPQ_Engagements.listView-meta.xml
<ListView>
    <fullName>All_CPQ_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Partner__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement_Type__c</field>
        <operation>equals</operation>
        <value>CPQ - IA Core</value>
    </filters>
    <label>All CPQ Engagements</label>
</ListView>