ConsultingHub/force-app/main/default/objects/ia_Engagement__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Partner__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Engagement_Type__c</field>
        <operation>notContain</operation>
        <value>Jump Start</value>
    </filters>
    <label>Completed IA Engagements</label>
</ListView>