ConsultingHub/force-app/main/default/objects/ia_Engagement__c/listViews/My_Engagements.listView-meta.xml
<ListView>
    <fullName>My_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Engagements</label>
</ListView>